# refinire

./: .coverage  CLAUDE.md  README.md  README_ja.md  coverage.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  summary_agents.md  test_provider_support.py  todo.md  trace_export.json
.github/workflows/: doctest.yml  mkdocs-deploy.yml
README_ja/: index.html
api_reference/: index.html
architecture/: index.html
concept/: index.html
context_management/: index.html
docs/: README.md  README_ja.md  agent_spec.md  api_reference.md  api_reference_ja.md  architecture.md  autonomous-quality-assurance_ja.md  cli.md  composable-flow-architecture.md  composable-flow-architecture_ja.md  concept.md  context_impl.md  deprecation_plan.md  environment_variables.md  environment_variables_ja.md  example_unified_processor.py  flow_context.md  flow_step.md  function_spec.md  index.md  index_ja.md  llm_pipeline_migration_ja.md  minimal_example.md  new_flow_control_concept.md  pipeline_examples.md  requirements.md  unified-llm-interface_ja.md  workflow.md
docs/tutorials/: advanced.md  context_management_ja.md  orchestration_mode_en.md  orchestration_mode_ja.md  quickstart.md  quickstart_ja.md  tracing.md  tracing_ja.md
examples/: clarify_agent_example.py  claude_agent.py  claude_check.py  claude_streaming_agent.py  claude_structured_agent.py  clearify_agent_example.py  dag_parallel_example.py  debug_streaming.py  example_clearify_pipeline.py  example_flow_step.py  extractor_agent_example.py  flow_identification_example.py  flow_show_demo.py  flow_show_example.py  flow_show_simple.py  gemini_agent.py  gemini_streaming_agent.py  gemini_structured_agent.py  gen_agent_example.py  genagent_simple_generation.py  genagent_with_dynamic_prompt.py  genagent_with_evaluation.py  genagent_with_guardrails.py  genagent_with_history.py  genagent_with_retry.py  genagent_with_tools.py  get_available_models_example.py  grafana_tempo_tracing_example.py  interactive_pipeline_example.py  llm_model.py  llm_pipeline_example.py  lmstudio_deep_debug.py  mcp_server_example.py  notification_agent_example.py  ollama_agent.py  ollama_streaming_agent.py  ollama_structured_agent.py  oneenv_tracing_example.py  orchestration_mode_example.py  pipeline_simple_generation.py  (+21 more)
examples/minimal/: minimal_example.py
function_spec/: index.html
pipeline_examples/: index.html
refinire-agents/: README.md  pyproject.toml
refinire-agents/src/refinire/agents/: __init__.py  clarify_agent.py  extractor.py  flow.py  gen_agent.py  notification.py  pipeline.py  router.py  validator.py
refinire-core/: README.md  pyproject.toml
refinire-core/src/refinire/core/: __init__.py  prompt_store.py
refinire-core/tests/: test_prompt_store.py  test_prompt_tracing.py
requirements/: index.html
scripts/: generate_ai_tools.py
search/: search_index.json
site/: 404.html  example_unified_processor.py  objects.inv
site/api_reference/: index.html
site/architecture/: index.html
site/function_spec/: index.html
site/search/: search_index.json
site/tutorials/advanced/: index.html
site/tutorials/quickstart/: index.html
src/agents_sdk_models/: __init__.py  anthropic.py  clarify_agent.py  clearify_agent.py  clearify_pipeline.py  context.py  flow.py  gemini.py  gen_agent.py  llm.py  llm_pipeline.py  message.py  ollama.py  pipeline.py  step.py  trace_registry.py  tracing.py  unify.py
src/agents_sdk_models/agents/: __init__.py  clarify_agent.py  extractor.py  gen_agent.py  llm_pipeline.py  notification.py  router.py  validator.py
src/refinire/: __init__.py  anthropic.py  context.py  flow.py  gemini.py  llm.py  llm_pipeline.py  message.py  ollama.py  pipeline.py  step.py  trace_registry.py  tracing.py
src/refinire/agents/: __init__.py  clarify_agent.py  context_provider_factory.py  extractor.py  gen_agent.py  notification.py  router.py  routing_agent.py  validator.py
src/refinire/core/: __init__.py  llm.py  model_parser.py  prompt_store.py  routing.py
study/: README.md  README_ja.md  advanced_features_demo.py  agents_sdk_simple.py  code_generation_routing.py  code_generation_simple.py  compare_direct_vs_refinire.py  comprehensive_flow_routing_test.py  debug_accurate_routing.py  debug_client_caching.py  debug_context_methods.py  debug_custom_config.py  debug_env_var_timing.py  debug_flow_context_inheritance.py  debug_flow_context_inheritance_simple.py  debug_flow_termination.py  debug_get_llm.py  debug_goto_timing.py  debug_message_structure.py  debug_patch_application.py  debug_provider_detection.py  debug_raw_exception.py  debug_refinire_agent.py  debug_routing_context.py  debug_routing_detailed.py  debug_routing_mode.py  debug_success_attribute.py  debug_timeout_config.py  fast_mode_sample.py  flow_debug_sample.py  flow_routing_sample.py  flow_sample.py  flow_simple_clean.py  flow_simple_sample.py  improved_conversation_history_test.py  investigate_agents_client.py  investigate_model_settings.py  investigate_model_settings_agent.py  processing_with_routing.py  refinire_agent_basic_study.py  (+24 more)
tests/: test_anthropic.py  test_anthropic_extra.py  test_clarify_agent.py  test_clearify_agent.py  test_clearify_pipeline.py  test_context.py  test_context_provider_factory.py  test_dag_parallel.py  test_extractor_agent.py  test_flow.py  test_flow_constructor.py  test_flow_identification.py  test_flow_show.py  test_gemini.py  test_gen_agent.py  test_gen_agent_compatibility.py  test_gen_agent_compatibility_simple.py  test_gen_agent_comprehensive.py  test_gen_agent_modern.py  test_get_available_models.py  test_interactive_pipeline.py  test_llm.py  test_llm_pipeline_tools.py  test_notification_agent.py  test_ollama.py  test_pipeline.py  test_pipeline_guardrails.py  test_pipeline_improvements.py  test_pipeline_prompts.py  test_pipeline_retry_comments.py  test_pipeline_run.py  test_pipeline_utils.py  test_refinire_agent.py  test_router_agent.py  test_routing.py  test_step.py  test_tools_integration.py  test_trace_search.py  test_trace_span.py  test_tracing.py  (+2 more)
tutorials/advanced/: index.html
tutorials/quickstart/: index.html
(+8 files in other folders)
