[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-sdk-models"
version = "0.0.18"
description = "Model adapters for OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.68.0",
    "openai-agents>=0.0.6",
]

[project.optional-dependencies]
examples = [
    "pydantic>=2.10, <3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agents_sdk_models"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.14",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]
