[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refinire"
version = "0.2.0"
description = "Refinire AI agent platform - Unified LLM interface and composable workflow orchestration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "refinire-core>=0.2.0",
    "refinire-agents>=0.2.0",
    "oneenv==0.2.0",
]

[project.optional-dependencies]
# Core extensions
rag = [
    "refinire-rag>=0.1.0",
]
database = [
    "refinire-database>=0.1.0",
]
monitoring = [
    "refinire-monitoring>=0.1.0",
]

# All features
all = [
    "refinire-rag>=0.1.0",
    "refinire-database>=0.1.0", 
    "refinire-monitoring>=0.1.0",
]
[project.urls]
Homepage = "https://github.com/kitfactory/refinire"
Documentation = "https://kitfactory.github.io/refinire/"
Repository = "https://github.com/kitfactory/refinire"
Bug-Tracker = "https://github.com/kitfactory/refinire/issues"

[project.entry-points."oneenv.templates"]
core = "refinire.templates:core_template"
agents = "refinire.templates:agents_template" 
development = "refinire.templates:development_template"

[tool.hatch.build.targets.wheel]
packages = ["src/refinire"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "mypy>=1.10.0",
    "colorama>=0.4.6",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
