[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refinire-agents"
version = "0.2.0"
description = "AI agents and workflow orchestration for Refinire platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "refinire-core>=0.2.0",
    "pydantic>=2.10,<3",
    "openai-agents>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/kitfactory/refinire"
Documentation = "https://kitfactory.github.io/refinire/"
Repository = "https://github.com/kitfactory/refinire"
Bug-Tracker = "https://github.com/kitfactory/refinire/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/refinire"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "mypy>=1.10.0",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true